Ass_8/manifests/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: blog-application
  labels:
    app: blog
spec:
  type: ClusterIP
  ports:
  - port: 9991
    protocol: TCP
    targetPort: 80
  selector:
    app: blog
