Ass_8/manifests/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: blog-application
spec:
  type: ClusterIP
  ports:
  - port: 8092
    targetPort: 3306
  selector:
    app: blog
