Ass_8/manifests/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: blog-application
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app: blog
spec:
  rules:
  - host: blog-application
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
